nginx-private/nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-frontend-deployment
  labels:
    app: nginx-frontend-deployment
    type: nginx-frontend-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx-frontend
  template:
    metadata:
      labels:
        app: nginx-frontend
    spec:
      containers:
      - name: nginx
        image: nginx
