nginx-private/nginx-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-frontend
  labels:
    app: nginx-frontend
    type: nginx-frontend
spec:
  containers:
  - name: nginx
    image: nginx
