nginx-private/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  annotations:
    service.beta.kubernetes.io/azure-load-balancer-internal: "true"
#    service.beta.kubernetes.io/azure-load-balancer-ip: "172.17.1.50"
  labels:
    app: nginx-service
    type: nginx-service
spec:
  selector:
    app: nginx-frontend
  ports:
  - port: 80
    targetPort: 80
  type: LoadBalancer
